# a-share-opportunity-scanner

./: .gitignore  README.md  pyproject.toml
data/derived/: daily_scan_cn.csv  daily_scan_summary_cn.json  stock_index_cn.json  universe_cn.csv  universe_summary_cn.json
data/raw/: market_cap_snapshot_cn.csv  market_cap_snapshot_cn.meta.json  stock_list_cn.csv  stock_list_cn.meta.json  technical_snapshot_cn.csv  technical_snapshot_cn.meta.json
data/seeds/: sample_market_cap_snapshot_cn.csv  sample_stock_list_cn.csv  sample_technical_snapshot_cn.csv
docs/: code-gaps.md  decision-mechanism.md  implementation-status.md  next-gaps.md  project-plan.md  ranking-policy.md  release-notes-v0.1.0.md  remaining-work-packages.md  rule-reference-mapping.md  system-architecture.md  technical-snapshot-from-ohlcv.md
memory/: 2026-03-26.md  2026-03-27.md
scripts/: build_stock_index.py  refresh_market_cap_snapshot.py  refresh_stock_list.py  refresh_technical_snapshot.py  refresh_technical_snapshot_from_ohlcv.py  run_daily_scan.py  run_rule_based_flow.py
src/: __init__.py
src/data_provider/: __init__.py  csv_store.py  interfaces.py  models.py  providers.py
src/market_cap/: __init__.py  csv_store.py  interfaces.py  models.py  providers.py
src/scanner/: __init__.py  config.py  engine.py  evaluation.py  formatter.py  models.py  ranking.py  reason_builder.py  record_builder.py  (+1 more)
tests/: test_flow_cli.py  test_formatter.py  test_ranking.py  test_scan_config.py  test_scanner.py  test_technical_ohlcv_pipeline.py  test_tushare_market_cap_provider.py  test_tushare_provider.py
(+12 files in other folders)
